README: add leveldb-dev to package list needed for build
Signed-off-by: Danny Al-Gaaf <danny.al-gaaf@bisect.de>
(cherry picked from commit 2becb35aef9984c3e5e9e5395d0c98ed51a4a6a0)

--- a/README
+++ b/README
@@ -121,8 +121,8 @@ To build the source code, you must install the following:
 - libatomic-ops-dev
 - libboost-program-options-dev
 - libboost-thread-dev
-
-
+- libexpat1-dev
+- libleveldb-dev
 
 For example:
 
